# TOI-RAG

./: .env.example  README.md  netlify.toml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  schemas.py
app/api/: routes.py
app/core/: config.py
app/db/: database.py
app/services/: auth_service.py  chat_service.py  chunking.py  embedding_backfill.py  ingestion.py  openai_client.py  parser.py  query_analyzer.py  query_router.py  query_service.py  repository.py  reranker.py
app/services/rag_v3/: __init__.py  answer_generator.py  common.py  distiller.py  evals.py  executor.py  pipeline.py  planner.py  query_rewriter.py  reranker.py  retrievers.py  telemetry.py  verifier.py
app/ui/: config.example.js  config.js  index.html
benchmarks/: chat_benchmark_cases.txt  live_benchmark_results_2026-03-16.txt  live_benchmark_results_2026-03-17.txt  rag_v3_eval_cases.json  rag_v3_industry_eval_cases.json
sql/: schema.sql
supabase/: README.md
supabase/functions/_shared/: auth.ts  chat-service.ts  cors.ts  db.ts  openai.ts  query-router.ts  query-service.ts  types.ts
supabase/functions/auth-login/: index.ts
supabase/functions/auth-logout/: index.ts
supabase/functions/auth-status/: index.ts
supabase/functions/catalog-editions/: index.ts
supabase/functions/catalog-sections/: index.ts
supabase/functions/chat/: index.ts
supabase/sql/: edge_rpc.sql
tests/: run_live_benchmark.py  run_rag_v3_eval.py  run_rag_v3_industry_eval.py  test_benchmark_flows.py  test_entity_generalization.py  test_openai_client.py  test_rag_v3_pipeline.py
