[project]
name = "toi-rag-fastapi"
version = "0.1.0"
description = "FastAPI starter for TOI E-Paper RAG on Supabase/Postgres"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.0",
  "psycopg[binary,pool]>=3.2.0",
  "openai>=1.68.0",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
